[package]
name = "constant_sandbox"
version = "0.1.0"
authors = ["Stephen Solka <solka@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib-ruby-parser = "3.0.0-4"
glob = "0.3.0"
num_cpus = "1.13.0"
crossbeam-channel = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
regex = "1"
clap = "2.33.0"